unpackaged/main/default/objects/Case/fields/Accident__c.field-meta.xml
<CustomField>
    <fullName>Accident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accident</label>
    <type>Checkbox</type>
</CustomField>