unpackaged/main/default/objects/Case/fields/Account_ID_parc__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_parc__c</fullName>
    <formula>Asset.Account.Id</formula>
    <label>Account ID parc</label>
    <type>Text</type>
</CustomField>