unpackaged/main/default/objects/Case/fields/Adresse_agence_intervenante__c.field-meta.xml
<CustomField>
    <fullName>Adresse_agence_intervenante__c</fullName>
    <formula>Agence_Intervenante__r.ShippingStreet +&quot; &quot;+ Agence_Intervenante__r.ShippingCity+&quot; &quot;+Agence_Intervenante__r.ShippingPostalCode+&quot; &quot;+Agence_Intervenante__r.ShippingCountry</formula>
    <label>Adresse agence intervenante</label>
    <type>Text</type>
</CustomField>