unpackaged/main/default/objects/Case/fields/Agence_compte__c.field-meta.xml
<CustomField>
    <fullName>Agence_compte__c</fullName>
    <label>Agence propriétaire /</label>
    <length>200</length>
    <type>Text</type>
</CustomField>