unpackaged/main/default/objects/Case/fields/Agence_Intervenante__c.field-meta.xml
<CustomField>
    <fullName>Agence_Intervenante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence Intervenante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>0120O0000003cw4QAA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requêtes</relationshipLabel>
    <relationshipName>Requetes</relationshipName>
    <type>Lookup</type>
</CustomField>