unpackaged/main/default/objects/Case/fields/Agence_proprietaire__c.field-meta.xml
<CustomField>
    <fullName>Agence_proprietaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence propriétaire</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requêtes (Agence propriétaire)</relationshipLabel>
    <relationshipName>Requetes_agenceproprietaire</relationshipName>
    <type>Lookup</type>
</CustomField>