unpackaged/main/default/objects/Case/fields/Code_postal__c.field-meta.xml
<CustomField>
    <fullName>Code_postal__c</fullName>
    <label>Code postal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>