unpackaged/main/default/objects/Case/fields/Contact_Chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Contact_Chauffeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact :
- Type d&#39;enregistrement : Chauffeur 
- Compte du contact = Compte Requête</description>
    <label>Contact - Chauffeur</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contact - Chauffeur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requêtes</relationshipLabel>
    <relationshipName>Requetes</relationshipName>
    <type>Lookup</type>
</CustomField>