unpackaged/main/default/objects/Case/fields/Contact_responsable_parc__c.field-meta.xml
<CustomField>
    <fullName>Contact_responsable_parc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact - responsable parc</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) AND 5</booleanFilter>
        <errorMessage>Le type de contact ne correspond pas au type de la requête</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contact - Responsable de parcs</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dépannage - Container</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contact - Commercial, Contact - Chauffeur, Contact - Responsable de parcs</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Demande de service</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Agence_proprietaire__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requêtes (Contact)</relationshipLabel>
    <relationshipName>Requete</relationshipName>
    <type>Lookup</type>
</CustomField>