unpackaged/main/default/objects/Case/fields/Customer_defect_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_defect_number__c</fullName>
    <label>Customer defect number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>