unpackaged/main/default/objects/Case/fields/Date_de_notation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_notation__c</fullName>
    <label>Date de notation</label>
    <type>DateTime</type>
</CustomField>