unpackaged/main/default/objects/Case/fields/Date_heure_debut_attente__c.field-meta.xml
<CustomField>
    <fullName>Date_heure_debut_attente__c</fullName>
    <label>Date/heure début d&#39;attente</label>
    <type>DateTime</type>
</CustomField>