unpackaged/main/default/objects/Case/fields/Date_Heure_Fin_attente__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Fin_attente__c</fullName>
    <label>Date/Heure Fin d&#39;attente</label>
    <type>DateTime</type>
</CustomField>