unpackaged/main/default/objects/Case/fields/Delai_d_intervention_int__c.field-meta.xml
<CustomField>
    <fullName>Delai_d_intervention_int__c</fullName>
    <formula>VALUE(TEXT(Delais_intervention_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai d&#39;intervention	(int)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>