unpackaged/main/default/objects/Case/fields/Delais_intervention__c.field-meta.xml
<CustomField>
    <fullName>Delais_intervention__c</fullName>
    <formula>if
(
OR(
$User.ProfileId == $Label.USR_ProfileId_PFCommunityPlusSiteAccount,
$User.ProfileId == $Label.USR_ProfileId_PFCommunityPlusUltimateAccount,
$User.ProfileId == $Label.USR_ProfileId_PFCommunityPlusClientAccount)
,
IMAGE(
CASE( Delais_intervention_Value__c ,
&#39;1&#39;, &quot;/client/resource/1572440942000/Satisfaction_Client_1?&quot;,
&#39;2&#39;, &quot;/client/resource/1572440942000/Satisfaction_Client_2?&quot;,
&#39;3&#39;, &quot;/client/resource/1572440942000/Satisfaction_Client_3?&quot;,
&#39;4&#39;, &quot;/client/resource/1572440942000/Satisfaction_Client_4?&quot;,
&#39;5&#39;, &quot;/client/resource/1572440942000/Satisfaction_Client_5?&quot;,

&quot;/client/resource/1572440942000/Satisfaction_Client_0?&quot;), &quot;&quot;, 40, 200 )
,
IMAGE(
CASE( Delais_intervention_Value__c ,
&#39;1&#39;, &quot;/resource/1572440942000/Satisfaction_Client_1?&quot;,
&#39;2&#39;, &quot;/resource/1572440942000/Satisfaction_Client_2?&quot;,
&#39;3&#39;, &quot;/resource/1572440942000/Satisfaction_Client_3?&quot;,
&#39;4&#39;, &quot;/resource/1572440942000/Satisfaction_Client_4?&quot;,
&#39;5&#39;, &quot;/resource/1572440942000/Satisfaction_Client_5?&quot;,

&quot;/resource/1572440942000/Satisfaction_Client_0&quot;), &quot;&quot;, 40, 200 )
)</formula>
    <label>Délai d&#39;intervention</label>
    <type>Text</type>
</CustomField>