unpackaged/main/default/objects/Case/fields/Demande_de_location__c.field-meta.xml
<CustomField>
    <fullName>Demande_de_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande de location</label>
    <type>Checkbox</type>
</CustomField>