unpackaged/main/default/objects/Case/fields/Depannage_autoroute__c.field-meta.xml
<CustomField>
    <fullName>Depannage_autoroute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dépannage autoroute</label>
    <type>Checkbox</type>
</CustomField>