unpackaged/main/default/objects/Case/fields/Description_incident_client__c.field-meta.xml
<CustomField>
    <fullName>Description_incident_client__c</fullName>
    <label>Description incident client</label>
    <type>TextArea</type>
</CustomField>