unpackaged/main/default/objects/Case/fields/Detail_Pb_Requete__c.field-meta.xml
<CustomField>
    <fullName>Detail_Pb_Requete__c</fullName>
    <description>Détail Problème picklist</description>
    <label>Détail Problème</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Qualification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accès</fullName>
            </value>
            <value>
                <fullName>Accessoires</fullName>
            </value>
            <value>
                <fullName>Accessoires (Etagères, rails )</fullName>
            </value>
            <value>
                <fullName>Accident véhicule</fullName>
            </value>
            <value>
                <fullName>Armoire électrique</fullName>
            </value>
            <value>
                <fullName>Bruit anormal</fullName>
            </value>
            <value>
                <fullName>BV/Transmission</fullName>
            </value>
            <value>
                <fullName>Casse Pare Brise</fullName>
            </value>
            <value>
                <fullName>Casse Retroviseur</fullName>
                <isActive>false</isActive>
                <label>Casse Retroviseur</label>
            </value>
            <value>
                <fullName>Choc</fullName>
                <isActive>false</isActive>
                <label>Choc</label>
            </value>
            <value>
                <fullName>Cloison</fullName>
            </value>
            <value>
                <fullName>Code alarme (à préciser sur les commentaires)</fullName>
            </value>
            <value>
                <fullName>Compresseur</fullName>
            </value>
            <value>
                <fullName>Coupure moteur</fullName>
            </value>
            <value>
                <fullName>Crevaison</fullName>
            </value>
            <value>
                <fullName>Défaut Froid</fullName>
            </value>
            <value>
                <fullName>Défaut Hayon</fullName>
            </value>
            <value>
                <fullName>Démarrage</fullName>
            </value>
            <value>
                <fullName>Démarrage / Batterie</fullName>
            </value>
            <value>
                <fullName>Descend Tout Seul</fullName>
            </value>
            <value>
                <fullName>Direction</fullName>
            </value>
            <value>
                <fullName>Eclairage</fullName>
            </value>
            <value>
                <fullName>Eclairage / Signalisation</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Eléctricité Châssis</fullName>
            </value>
            <value>
                <fullName>Enregistreur</fullName>
            </value>
            <value>
                <fullName>Erreur carburant</fullName>
                <isActive>false</isActive>
                <label>Erreur carburant</label>
            </value>
            <value>
                <fullName>Erreur carburant / adblue / lubrifiant</fullName>
            </value>
            <value>
                <fullName>Erreur Utilisation / Casse Rétroviseur</fullName>
            </value>
            <value>
                <fullName>Fluide frigorigene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>