unpackaged/main/default/objects/Case/fields/Disponibilit_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Disponibilit_vehicule__c</fullName>
    <label>Disponibilité véhicule</label>
    <type>Date</type>
</CustomField>