unpackaged/main/default/objects/Case/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <formula>if 
( 
(isblank(ClosedDate)==true) 
, 
TEXT( FLOOR( Duree_de_la_requete__c /1440 ) ) &amp; &quot; Jours &quot; 
&amp; TEXT( FLOOR( MOD( (Duree_de_la_requete__c /1440 ) * 24, 24 ) ) ) &amp; &quot; Heures &quot; 
&amp; TEXT( ROUND( MOD( (Duree_de_la_requete__c /1440 ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot; 
, 
TEXT( FLOOR( Duree_de_la_requete__c /1440 ) ) &amp; &quot; Jours &quot; 
&amp; TEXT( FLOOR( MOD( (Duree_de_la_requete__c /1440 ) * 24, 24 ) ) ) &amp; &quot; Heures &quot; 
&amp; TEXT( ROUND( MOD( (Duree_de_la_requete__c /1440 ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée</label>
    <type>Text</type>
</CustomField>