unpackaged/main/default/objects/Case/fields/Duree_Attente__c.field-meta.xml
<CustomField>
    <fullName>Duree_Attente__c</fullName>
    <formula>if 
( 
AND( ISNULL( Date_heure_debut_attente__c ) == FALSE , ISNULL( Date_Heure_Fin_attente__c ) == FALSE) 
, 
(Date_Heure_Fin_attente__c - Date_heure_debut_attente__c)*1440 
, 
NULL 
)</formula>
    <label>Durée Attente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>