unpackaged/main/default/objects/Case/fields/Duree_Attente_Totale__c.field-meta.xml
<CustomField>
    <fullName>Duree_Attente_Totale__c</fullName>
    <label>Durée d&#39;attente (Somme)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>