unpackaged/main/default/objects/Case/fields/Duree_de_la_requete__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_la_requete__c</fullName>
    <formula>IF 
( 
ISBLANK(ClosedDate) 
, 

ROUND 
( 
((Now() - CreatedDate)*1440)-Duree_Attente_Totale__c,0 
) 

, 

( 
ROUND 
( 
((ClosedDate - CreatedDate)*1440) - Duree_Attente_Totale__c	,0 
) 
) 



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de la requête (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>