unpackaged/main/default/objects/Case/fields/Duree_de_la_requete_texte__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_la_requete_texte__c</fullName>
    <formula>TEXT(FLOOR( Duree_de_la_requete__c  /24))&amp;&quot; Jours &quot;&amp;TEXT(MOD(FLOOR(Duree_de_la_requete__c ),24)) &amp;&quot; Hrs &quot;
&amp;TEXT(FLOOR(VALUE(TEXT(VALUE(RIGHT(TEXT(Duree_de_la_requete__c),2))/100*60))))&amp;&quot; Minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de la requête</label>
    <type>Text</type>
</CustomField>