unpackaged/main/default/objects/Case/fields/Email_Responsable_Parc__c.field-meta.xml
<CustomField>
    <fullName>Email_Responsable_Parc__c</fullName>
    <label>Email Responsable Parc</label>
    <type>Email</type>
</CustomField>