unpackaged/main/default/objects/Case/fields/Fin_Disponibilite_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Fin_Disponibilite_vehicule__c</fullName>
    <label>Fin Disponibilité véhicule</label>
    <type>DateTime</type>
</CustomField>