unpackaged/main/default/objects/Case/fields/IdAlerteOrigin__c.field-meta.xml
<CustomField>
    <fullName>IdAlerteOrigin__c</fullName>
    <description>Id de l&#39;alerte à l&#39;origine de la création du case si le case a été créée depuis une alerte</description>
    <label>IdAlerteOrigin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>