unpackaged/main/default/objects/Case/fields/Incendie__c.field-meta.xml
<CustomField>
    <fullName>Incendie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incendie</label>
    <type>Checkbox</type>
</CustomField>