unpackaged/main/default/objects/Case/fields/Intervention_Nuit__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Nuit__c</fullName>
    <formula>IF
(
 OR(Owner:User.ProfileId ==  $Label.USR_ProfileId_PFColdline , TECH_Intervention_Nuit__c =true)
,
TRUE
,
FALSE
)</formula>
    <label>Intervention Nuit</label>
    <type>Checkbox</type>
</CustomField>