unpackaged/main/default/objects/Case/fields/Lien__c.field-meta.xml
<CustomField>
    <fullName>Lien__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
    <label>Lien</label>
    <type>Text</type>
</CustomField>