unpackaged/main/default/objects/Case/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <formula>if
(
Mail_envoye__c = TRUE ,
IMAGE(&quot;/resource/1629124866000/Icon_Mail_Yes?&quot;, &quot;&quot;,64,64),
IMAGE(&quot;/resource/1629124888000/Icon_Mail_No?&quot;, &quot;&quot;,64,64)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail</label>
    <type>Text</type>
</CustomField>