unpackaged/main/default/objects/Case/fields/Mail_envoye__c.field-meta.xml
<CustomField>
    <fullName>Mail_envoye__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail envoyé</label>
    <type>Checkbox</type>
</CustomField>