unpackaged/main/default/objects/Case/fields/N_Tel_Chauffeur__c.field-meta.xml
<CustomField>
    <fullName>N_Tel_Chauffeur__c</fullName>
    <label>N° Tel - Chauffeur</label>
    <type>Phone</type>
</CustomField>