unpackaged/main/default/objects/Case/fields/N_Tel_Contact_client__c.field-meta.xml
<CustomField>
    <fullName>N_Tel_Contact_client__c</fullName>
    <label>N° Tél - Contact client</label>
    <type>Phone</type>
</CustomField>