unpackaged/main/default/objects/Case/fields/Nom_Chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Nom_Chauffeur__c</fullName>
    <label>Nom Chauffeur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>