unpackaged/main/default/objects/Case/fields/Nom_Commercial_Client__c.field-meta.xml
<CustomField>
    <fullName>Nom_Commercial_Client__c</fullName>
    <description>Nom commercial du compte attaché à la requête</description>
    <formula>Account.NomCommercial__c</formula>
    <label>Nom Commercial Client</label>
    <type>Text</type>
</CustomField>