unpackaged/main/default/objects/Case/fields/Nom_Contact_Client__c.field-meta.xml
<CustomField>
    <fullName>Nom_Contact_Client__c</fullName>
    <description>field pour container Layout &quot; nom du responsable parc &quot;</description>
    <label>Nom Contact Client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>