unpackaged/main/default/objects/Case/fields/Notation_effectuee_par__c.field-meta.xml
<CustomField>
    <fullName>Notation_effectuee_par__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notation effectuée par</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requetes_Notation</relationshipName>
    <type>Lookup</type>
</CustomField>