unpackaged/main/default/objects/Case/fields/Notes_Chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Notes_Chauffeur__c</fullName>
    <label>Notes Chauffeur</label>
    <type>TextArea</type>
</CustomField>