unpackaged/main/default/objects/Case/fields/Organes_controler__c.field-meta.xml
<CustomField>
    <fullName>Organes_controler__c</fullName>
    <label>Organes à contrôler</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cabine</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Groupe</fullName>
            </value>
            <value>
                <fullName>Pneumatique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>