unpackaged/main/default/objects/Case/fields/Parc_Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Parc_Vehicule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc Véhicule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parc</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Requêtes</relationshipLabel>
    <relationshipName>Requetes</relationshipName>
    <type>Lookup</type>
</CustomField>