unpackaged/main/default/objects/Case/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALLEMAGNE</fullName>
            </value>
            <value>
                <fullName>AUTRICHE</fullName>
            </value>
            <value>
                <fullName>BELGIQUE</fullName>
            </value>
            <value>
                <fullName>ESPAGNE</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>HONGRIE</fullName>
            </value>
            <value>
                <fullName>IRLANDE</fullName>
            </value>
            <value>
                <fullName>ITALIE</fullName>
            </value>
            <value>
                <fullName>LUXEMBOURG</fullName>
            </value>
            <value>
                <fullName>PAYS - BAS</fullName>
            </value>
            <value>
                <fullName>POLOGNE</fullName>
            </value>
            <value>
                <fullName>PORTUGAL</fullName>
            </value>
            <value>
                <fullName>REPUBLIQUE TCHEQUE</fullName>
            </value>
            <value>
                <fullName>ROUMANIE</fullName>
            </value>
            <value>
                <fullName>ROYAUME UNI</fullName>
            </value>
            <value>
                <fullName>SLOVAQUIE</fullName>
            </value>
            <value>
                <fullName>SUISSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>