unpackaged/main/default/objects/Case/fields/Pays_Region__c.field-meta.xml
<CustomField>
    <fullName>Pays_Region__c</fullName>
    <formula>TEXT(Agence_Intervenante__r.Territoire__c)</formula>
    <label>Pays/Région</label>
    <type>Text</type>
</CustomField>