unpackaged/main/default/objects/Case/fields/Plages_durees__c.field-meta.xml
<CustomField>
    <fullName>Plages_durees__c</fullName>
    <label>Plages des durées</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moins d&#39;une heure</fullName>
            </value>
            <value>
                <fullName>1h - 2h</fullName>
            </value>
            <value>
                <fullName>2h - 3h</fullName>
            </value>
            <value>
                <fullName>Plus de 3 heures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>