unpackaged/main/default/objects/Case/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <label>Précisions lieu panne</label>
    <type>TextArea</type>
</CustomField>