unpackaged/main/default/objects/Case/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <description>Qualification Problème picklist</description>
    <label>Qualification Problème</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branchement</fullName>
            </value>
            <value>
                <fullName>Carrosserie/Caisse/Cellule isotherme</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Groupe Frigo</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Hayon/système de levage</fullName>
            </value>
            <value>
                <fullName>Moteur</fullName>
            </value>
            <value>
                <fullName>Pneumatique</fullName>
            </value>
            <value>
                <fullName>Erreur D&#39;utilisation / Casse / Accident</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>