unpackaged/main/default/objects/Case/fields/Qualite_de_l_intervention_int__c.field-meta.xml
<CustomField>
    <fullName>Qualite_de_l_intervention_int__c</fullName>
    <formula>VALUE(TEXT(Qualite_intervention_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualité de l&#39;intervention (int)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>