unpackaged/main/default/objects/Case/fields/Qualite_intervention_Value__c.field-meta.xml
<CustomField>
    <fullName>Qualite_intervention_Value__c</fullName>
    <label>Qualité de l&#39;intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>