unpackaged/main/default/objects/Case/fields/qualtrics__QSC_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QSC_Case_Id__c</fullName>
    <externalId>true</externalId>
    <label>Qualtrics Social Connect Case Id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>