unpackaged/main/default/objects/Case/fields/qualtrics__QSC_Is_Private__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QSC_Is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Private Message from QSC?</label>
    <type>Checkbox</type>
</CustomField>