unpackaged/main/default/objects/Case/fields/qualtrics__QSC_Ownership__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QSC_Ownership__c</fullName>
    <label>Qualtrics Social Connect Ownership</label>
    <length>35</length>
    <type>Text</type>
</CustomField>