unpackaged/main/default/objects/Case/fields/qualtrics__QSC_Service__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QSC_Service__c</fullName>
    <label>QSC Service</label>
    <length>35</length>
    <type>Text</type>
</CustomField>