unpackaged/main/default/objects/Case/fields/Quantite_en_charge__c.field-meta.xml
<CustomField>
    <fullName>Quantite_en_charge__c</fullName>
    <label>Quantité en charge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>