unpackaged/main/default/objects/Case/fields/Raison_de_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Raison_de_fermeture__c</fullName>
    <label>Raison de fermeture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Résolu par téléphone</fullName>
            </value>
            <value>
                <fullName>Client dépanné</fullName>
            </value>
            <value>
                <fullName>Client relayé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>