unpackaged/main/default/objects/Case/fields/Relais_Necessaire__c.field-meta.xml
<CustomField>
    <fullName>Relais_Necessaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relais Nécessaire</label>
    <type>Checkbox</type>
</CustomField>