unpackaged/main/default/objects/Case/fields/Relation_avec_le_technicien_int__c.field-meta.xml
<CustomField>
    <fullName>Relation_avec_le_technicien_int__c</fullName>
    <formula>VALUE(TEXT(Relation_avec_le_technicien_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation avec le technicien (int) (int)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>