unpackaged/main/default/objects/Case/fields/Requete_en_attente__c.field-meta.xml
<CustomField>
    <fullName>Requete_en_attente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requête en attente</label>
    <type>Checkbox</type>
</CustomField>