unpackaged/main/default/objects/Case/fields/Rue_Lieu__c.field-meta.xml
<CustomField>
    <fullName>Rue_Lieu__c</fullName>
    <label>Rue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>