unpackaged/main/default/objects/Case/fields/Satisfaction_Client__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Client__c</fullName>
    <label>Satisfaction Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Favorable</fullName>
            </value>
            <value>
                <fullName>Neutre</fullName>
            </value>
            <value>
                <fullName>Defavorable</fullName>
                <label>Défavorable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>